[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu/background.png" type="Texture" id=1]
[ext_resource path="res://inventory/шлем.png" type="Texture" id=2]
[ext_resource path="res://menu/MYRIADPRO-BOLDIT.OTF" type="DynamicFontData" id=3]
[ext_resource path="res://inventory/back.png" type="Texture" id=4]
[ext_resource path="res://inventory/Inventory.gd" type="Script" id=5]
[ext_resource path="res://inventory/138370.png" type="Texture" id=6]
[ext_resource path="res://inventory/Броня.png" type="Texture" id=7]
[ext_resource path="res://inventory/паножи.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="Inventory" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -392.0
margin_top = -152.0
margin_right = 1708.0
margin_bottom = 928.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="sword" type="Sprite" parent="."]
position = Vector2( 512, 448 )
texture = ExtResource( 6 )

[node name="helmet" type="Sprite" parent="."]
position = Vector2( 512, 256 )
texture = ExtResource( 2 )

[node name="Zoloto" type="Label" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 195.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Золото"

[node name="back" type="Button" parent="."]
margin_left = 1184.0
margin_top = 8.0
margin_right = 1260.0
margin_bottom = 78.0
icon = ExtResource( 4 )
flat = true

[node name="armor" type="Sprite" parent="."]
position = Vector2( 768, 256 )
texture = ExtResource( 7 )

[node name="leggings" type="Sprite" parent="."]
position = Vector2( 768, 448 )
texture = ExtResource( 8 )

[node name="upgrade1" type="Button" parent="."]
margin_left = 176.0
margin_top = 200.0
margin_right = 443.0
margin_bottom = 264.0
focus_mode = 0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Улучшить"
flat = true

[node name="upgrade2" type="Button" parent="."]
margin_left = 176.0
margin_top = 392.0
margin_right = 443.0
margin_bottom = 456.0
focus_mode = 0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Улучшить"
flat = true

[node name="upgrade3" type="Button" parent="."]
margin_left = 856.0
margin_top = 200.0
margin_right = 1123.0
margin_bottom = 264.0
focus_mode = 0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Улучшить"
flat = true

[node name="upgrade4" type="Button" parent="."]
margin_left = 856.0
margin_top = 384.0
margin_right = 1123.0
margin_bottom = 448.0
focus_mode = 0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Улучшить"
flat = true

[node name="costUP1" type="Label" parent="."]
margin_left = 240.0
margin_top = 264.0
margin_right = 384.0
margin_bottom = 296.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="costUP2" type="Label" parent="."]
margin_left = 240.0
margin_top = 456.0
margin_right = 384.0
margin_bottom = 488.0
rect_pivot_offset = Vector2( 88, 16 )
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="costUP3" type="Label" parent="."]
margin_left = 912.0
margin_top = 264.0
margin_right = 1056.0
margin_bottom = 296.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="costUP4" type="Label" parent="."]
margin_left = 912.0
margin_top = 456.0
margin_right = 1056.0
margin_bottom = 488.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="gold" type="Label" parent="."]
margin_left = 216.0
margin_top = 16.0
margin_right = 448.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Health" type="Label" parent="."]
margin_left = 64.0
margin_top = 608.0
margin_right = 208.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Здоровье"
align = 1

[node name="Def" type="Label" parent="."]
margin_left = 672.0
margin_top = 608.0
margin_right = 816.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Защита"
align = 1

[node name="Damage" type="Label" parent="."]
margin_left = 384.0
margin_top = 608.0
margin_right = 496.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Атака"
align = 1

[node name="HealthInt" type="Label" parent="."]
margin_left = 216.0
margin_top = 608.0
margin_right = 360.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0.415686, 0.0470588, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="DamageInt" type="Label" parent="."]
margin_left = 504.0
margin_top = 608.0
margin_right = 648.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0.415686, 0.0470588, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="DefInt" type="Label" parent="."]
margin_left = 824.0
margin_top = 608.0
margin_right = 968.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0.415686, 0.0470588, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Lucky" type="Label" parent="."]
margin_left = 992.0
margin_top = 608.0
margin_right = 1136.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Удача"
align = 1

[node name="luckyInt" type="Label" parent="."]
margin_left = 1128.0
margin_top = 608.0
margin_right = 1272.0
margin_bottom = 640.0
custom_colors/font_color = Color( 0, 0.415686, 0.0470588, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[connection signal="button_down" from="back" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="upgrade1" to="." method="_on_upgrade1_button_down"]
[connection signal="button_down" from="upgrade2" to="." method="_on_upgrade2_button_down"]
[connection signal="button_down" from="upgrade3" to="." method="_on_upgrade3_button_down"]
[connection signal="button_down" from="upgrade4" to="." method="_on_upgrade4_button_down"]
